--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button class="close-btn" data-modal-close>Закрити
-        <!-- <svg class="close-black"> 
-          <use href="/images/sprite.svg#close-black"></use>
-        </svg>-->
+      <button class="close-btn" data-modal-close>
+        <svg class="close-modal" width="18" height="18">
+          <use href="./images/sprite.svg#close-black"></use>
+        </svg>
       </button>
     </div>
   </div>
