--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,16 @@
         <ul class="list flex-element">
           <li class="item">
             <a href="">
-              <img src="./images/Project1.jpg" class="portfolio-photo" alt="Проект1" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project1.jpg" class="portfolio-photo" alt="Проект1" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p class="portfolio-text">Веб-сайт</p>
@@ -87,7 +96,16 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project2.jpg" class="portfolio-photo" alt="Проект2" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project2.jpg" class="portfolio-photo" alt="Проект2" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                    сервісів. Все це дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-text">Дизайн</p>
@@ -96,7 +114,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project3.jpg" class="portfolio-photo" alt="Проект3" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project3.jpg" class="portfolio-photo" alt="Проект3" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                 <p class="portfolio-text">Ресторан Seafood</p>
@@ -105,7 +133,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project4.jpg" class="portfolio-photo" alt="Проект4" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project4.jpg" class="portfolio-photo" alt="Проект4" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Проєкт Prime</h2>
                 <p class="portfolio-text">Маркетинг</p>
@@ -114,7 +152,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project5.jpg" class="portfolio-photo" alt="Проект5" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project5.jpg" class="portfolio-photo" alt="Проект5" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Проєкт Boxes</h2>
                 <p class="portfolio-text">Додаток</p>
@@ -123,7 +171,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project6.jpg" class="portfolio-photo" alt="Проект6" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project6.jpg" class="portfolio-photo" alt="Проект6" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-text">Веб-сайт</p>
@@ -132,7 +190,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project7.jpg" class="portfolio-photo" alt="Проект7" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project7.jpg" class="portfolio-photo" alt="Проект7" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Видання Limited Edition</h2>
                 <p class="portfolio-text">Дизайн</p>
@@ -141,7 +209,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project8.jpg" class="portfolio-photo" alt="Проект8" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project8.jpg" class="portfolio-photo" alt="Проект8" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Проєкт LAB</h2>
                 <p class="portfolio-text">Маркетинг</p>
@@ -150,7 +228,17 @@
           </li>
           <li class="item">
             <a href="">
-              <img src="./images/Project9.jpg" class="portfolio-photo" alt="Проект9" width="370" />
+              <div class="item-thumb">
+                <img src="./images/Project9.jpg" class="portfolio-photo" alt="Проект9" width="370" />
+                <div class="item-overlay">
+                  <p class="item-overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це
+                    дозволить відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="flex-hat">
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p class="portfolio-text">Додаток</p>
