--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     </div>
   </footer>
   <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
+    <div class="modal modal-animation">
       <button class="close-btn" data-modal-close>
         <svg class="close-modal" width="18" height="18">
           <use href="./images/sprite.svg#close-black"></use>
